--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     margin: 0;
     color: white;
     min-height: 200vh;
+    overflow-x:hidden ;
 }
 
 .box{
@@ -21,6 +22,11 @@ body{
 
 p{
     visibility: hidden;
+    width: 240px;
+    margin: 10px auto 0;
+    opacity: 0;
+    transition: 0.6s;
+    transform: translateX(-200px);
 }
 
 
@@ -29,4 +35,24 @@ p{
     background: rgb(47,47,47);
     border-radius: 30px;
     border: 6px dashed pink;
+}
+
+.show-response{
+
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.mousemove{
+    height: 50px;
+    width: 50px;
+    border: 2px solid pink;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    border-radius: 50px;
+    transition: 0.2s ease;
+    z-index: -1;
+
+
 }
