--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ p{
     width: 50px;
     border: 2px solid pink;
     position: absolute;
-<<<<<<< HEAD
     transform: translate(-50%,-50%);
     border-radius: 50px;
     transition: 0.2s ease;
@@ -57,7 +56,21 @@ p{
 
 
 }
-=======
-    border-radius: 50px;
+
+nav{
+
+    background-color: pink;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    top: -50px;
+    transition: 0.4s;
+
 }
->>>>>>> 14daf86a8660353a9c8922585569e07d9991f49b
+ul{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0;
+}
